Added "comming soon" message to the asf-site branch

--- a/content/index.html
+++ b/content/index.html
@@ -2,5 +2,8 @@
   <head>
     <title>Apache Rya (Incubating)</title>
   </head>
-  <body/>
+  <body>
+    <h1>Apache Rya (Incubating)</h1>
+    <h2>Coming soon...</h2>
+  </body>
 </html>
