Added (incubating) to the Apache Rya name

--- a/content/community/index.html
+++ b/content/community/index.html
@@ -43,7 +43,7 @@
           </button>
           <a class="navbar-brand" href="/">
               <!-- <img src="/assets/themes/apache/img/logo.png" width="50"> -->
-              Apache Rya
+              Apache Rya (incubating)
           </a>
         </div>
         <nav class="navbar-collapse collapse" role="navigation">
@@ -91,7 +91,7 @@
 
 <p><br /><br /><br /></p>
 
-<h2 id="apache-rya-community">Apache Rya Community</h2>
+<h2 id="apache-rya-incubating-community">Apache Rya (incubating) Community</h2>
 
 <p>Every volunteer project obtains its strength from the people involved in it. We invite you to participate as much or as little as you choose.</p>
 
@@ -157,7 +157,7 @@
     <div class="wrapper">
         <div class="footer-col-wrapper">
             
-            Apache Rya is an effort undergoing <a href="https://incubator.apache.org/index.html">Incubation</a>
+            Apache Rya (incubating) is an effort undergoing <a href="https://incubator.apache.org/index.html">Incubation</a>
             at The Apache Software Foundation (ASF), sponsored by the Incubator. Incubation is required of all newly
             accepted projects until a further review indicates that the infrastructure, communications, and decision
             making process have stabilized in a manner consistent with other successful ASF projects. While incubation
@@ -173,7 +173,7 @@
                 </div>
                 
                 <div>
-                    Copyright &copy; 2015 <a href="http://www.apache.org">The Apache Software Foundation</a>.
+                    Copyright &copy; 2016 <a href="http://www.apache.org">The Apache Software Foundation</a>.
                     Licensed under the <a href="http://www.apache.org/licenses/LICENSE-2.0">Apache License, Version
                     2.0</a>.
                     <br>
@@ -186,6 +186,7 @@
         </div>
     </div>
 </footer>
+
       </footer>
     </div>
 
