--- a/content/documentation/index.html
+++ b/content/documentation/index.html
@@ -43,7 +43,7 @@
           </button>
           <a class="navbar-brand" href="/">
               <!-- <img src="/assets/themes/apache/img/logo.png" width="50"> -->
-              Apache Rya
+              Apache Rya (incubating)
           </a>
         </div>
         <nav class="navbar-collapse collapse" role="navigation">
@@ -89,7 +89,7 @@
 
 -->
 
-<h2 id="apache-rya-documentation">Apache Rya Documentation</h2>
+<h2 id="apache-rya-incubating-documentation">Apache Rya (incubating) Documentation</h2>
 
 <h3 id="articles">Articles</h3>
 
@@ -129,7 +129,7 @@
     <div class="wrapper">
         <div class="footer-col-wrapper">
             
-            Apache Rya is an effort undergoing <a href="https://incubator.apache.org/index.html">Incubation</a>
+            Apache Rya (incubating) is an effort undergoing <a href="https://incubator.apache.org/index.html">Incubation</a>
             at The Apache Software Foundation (ASF), sponsored by the Incubator. Incubation is required of all newly
             accepted projects until a further review indicates that the infrastructure, communications, and decision
             making process have stabilized in a manner consistent with other successful ASF projects. While incubation
@@ -145,7 +145,7 @@
                 </div>
                 
                 <div>
-                    Copyright &copy; 2015 <a href="http://www.apache.org">The Apache Software Foundation</a>.
+                    Copyright &copy; 2016 <a href="http://www.apache.org">The Apache Software Foundation</a>.
                     Licensed under the <a href="http://www.apache.org/licenses/LICENSE-2.0">Apache License, Version
                     2.0</a>.
                     <br>
@@ -158,6 +158,7 @@
         </div>
     </div>
 </footer>
+
       </footer>
     </div>
 
