Corresponding update to Josh's info

--- a/content/community-members/index.html
+++ b/content/community-members/index.html
@@ -135,10 +135,10 @@
         </tr>
     
         <tr>
-        <td><a href="http://github.com/elserj"><img width="64" src="http://github.com/elserj.png" /></a></td>
-        <td>John Elser</td>
+        <td><a href="http://github.com/joshelser"><img width="64" src="http://github.com/joshelser.png" /></a></td>
+        <td>Josh Elser</td>
         <td>elserj</td>
-        <td><a href="http://github.com/elserj">elserj</a></td>
+        <td><a href="http://github.com/joshelser">joshelser</a></td>
         <td>Mentor</td>
         <td></td>
         </tr>
