removed GitHub link from main menu and download page

--- a/content/download/index.html
+++ b/content/download/index.html
@@ -4,7 +4,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Downloads</title>
+    <title>Rya Downloads</title>
     <meta name="description" content="Project Downloads page">
     <meta name="author" content="">
 
@@ -57,7 +57,6 @@
             </li>
             <li><a href="/download">Downloads</a></li>
             <li><a href="/documentation">Documentation</a></li>
-            <li><a href="https://github.com/apache/incubator-rya">GitHub</a></li>
              <li id="apache">
               <a href="#" data-toggle="dropdown" class="dropdown-toggle">Apache<b class="caret"></b></a>
                <ul class="dropdown-menu">
@@ -78,7 +77,7 @@
     <div class="container">
       
 
-<!--<div class="hero-unit Downloads">
+<!--<div class="hero-unit Rya Downloads">
   <h1></h1>
 </div>
 -->
@@ -91,9 +90,11 @@
 
 <h2 id="apache-rya-incubating-downloads">Apache Rya (incubating) Downloads</h2>
 
-<p>There are no official Apache releases for Rya yet. You can download and build the latest code from <a href="https://github.com/apache/incubator-rya">GitHub</a>.</p>
+<p>There are no official Apache releases for Rya yet.</p>
 
-<p>If you are interested in a quick way to download and deploy Rya, you can try the <a href="https://github.com/apache/incubator-rya/tree/develop/extras/vagrantExample/src/main/vagrant">Rya vagrant</a> script to create a VM with Accumulo and Rya on it.</p>
+<p>First Apache Incubator release coming soon!!</p>
+
+<p>If you are interested in helping out, please join our developers list <a href="&#109;&#097;&#105;&#108;&#116;&#111;:&#100;&#101;&#118;&#045;&#115;&#117;&#098;&#115;&#099;&#114;&#105;&#098;&#101;&#064;&#114;&#121;&#097;&#046;&#105;&#110;&#099;&#117;&#098;&#097;&#116;&#111;&#114;&#046;&#097;&#112;&#097;&#099;&#104;&#101;&#046;&#111;&#114;&#103;&#063;&#115;&#117;&#098;&#106;&#101;&#099;&#116;&#045;&#115;&#101;&#110;&#100;&#032;&#116;&#104;&#105;&#115;&#032;&#101;&#109;&#097;&#105;&#108;&#032;&#116;&#111;&#032;&#115;&#117;&#098;&#115;&#099;&#114;&#105;&#098;&#101;">dev@rya.incubator.apache.org</a>.</p>
 
 
   </div>
