Fix broken img for empty github id, Accumulo name, Add lotts org

--- a/content/index.html
+++ b/content/index.html
@@ -75,7 +75,7 @@
 <div class="jumbotron">
   <div class="container">
     <h1>Apache Rya (incubating)</h1>
-    <p>Apache Rya (incubating) is a scalable RDF triple store built on top of a columnar index store (Accumulo).</p>
+    <p>Apache Rya (incubating) is a scalable RDF triple store built on top of a columnar index store (Apache Accumulo®).</p>
 
     
        <a href="download" class="btn btn-primary btn-lg bigFingerButton" role="button">Get Rya</a></p>
@@ -101,7 +101,7 @@
 
 <h2 id="apache-rya">Apache Rya</h2>
 
-<p>Rya (pronounced “ree-uh” /rēə/) is a cloud-based RDF triple store that supports SPARQL queries. Rya is a scalable RDF data management system built on top of Accumulo. Rya uses novel storage methods, indexing schemes, and query processing techniques that scale to billions of triples across multiple nodes. Rya provides fast and easy access to the data through SPARQL, a conventional query mechanism for RDF data.</p>
+<p>Rya (pronounced “ree-uh” /rēə/) is a cloud-based RDF triple store that supports SPARQL queries. Rya is a scalable RDF data management system built on top of Apache Accumulo®. Rya uses novel storage methods, indexing schemes, and query processing techniques that scale to billions of triples across multiple nodes. Rya provides fast and easy access to the data through SPARQL, a conventional query mechanism for RDF data.</p>
 
   </div>
 </div>
