--- a/content/community-members/index.html
+++ b/content/community-members/index.html
@@ -20,6 +20,7 @@
     <link href="/assets/themes/apache/bootstrap/css/bootstrap.css" rel="stylesheet">
     <link href="/assets/themes/apache/css/style.css?body=1" rel="stylesheet" type="text/css">
     <link href="/assets/themes/apache/css/syntax.css" rel="stylesheet"  type="text/css" media="screen" />
+    <link href="/assets/themes/apache/css/rya.css" rel="stylesheet"  type="text/css" media="screen" />
     <!-- Le fav and touch icons -->
     <!-- Update these with your own images
     <link rel="shortcut icon" href="images/favicon.ico">
@@ -260,7 +261,7 @@
 
       <hr>
       <footer>
-        <!-- <p>&copy; 2016 </p>-->
+        <!-- <p>&copy; 2017 </p>-->
         <footer class="site-footer">
     <div class="wrapper">
         <div class="footer-col-wrapper">
