--- a/content/documentation/index.html
+++ b/content/documentation/index.html
@@ -20,6 +20,7 @@
     <link href="/assets/themes/apache/bootstrap/css/bootstrap.css" rel="stylesheet">
     <link href="/assets/themes/apache/css/style.css?body=1" rel="stylesheet" type="text/css">
     <link href="/assets/themes/apache/css/syntax.css" rel="stylesheet"  type="text/css" media="screen" />
+    <link href="/assets/themes/apache/css/rya.css" rel="stylesheet"  type="text/css" media="screen" />
     <!-- Le fav and touch icons -->
     <!-- Update these with your own images
     <link rel="shortcut icon" href="images/favicon.ico">
@@ -114,7 +115,7 @@
 
 <h3 id="rya-manual">Rya Manual</h3>
 
-<p>A copy of the Rya Manual is located <a href="https://github.com/apache/incubator-rya/blob/develop/extras/rya.manual/src/site/markdown/index.md">here</a></p>
+<p>A copy of the Rya Manual is located <a href="https://github.com/apache/incubator-rya/blob/master/extras/rya.manual/src/site/markdown/index.md">here</a></p>
 
 
   </div>
@@ -123,7 +124,7 @@
 
       <hr>
       <footer>
-        <!-- <p>&copy; 2016 </p>-->
+        <!-- <p>&copy; 2017 </p>-->
         <footer class="site-footer">
     <div class="wrapper">
         <div class="footer-col-wrapper">
