added release-3.2.10 , updated copyrights to 2017, README.md. closes #3 closes #1

--- a/content/community/index.html
+++ b/content/community/index.html
@@ -20,6 +20,7 @@
     <link href="/assets/themes/apache/bootstrap/css/bootstrap.css" rel="stylesheet">
     <link href="/assets/themes/apache/css/style.css?body=1" rel="stylesheet" type="text/css">
     <link href="/assets/themes/apache/css/syntax.css" rel="stylesheet"  type="text/css" media="screen" />
+    <link href="/assets/themes/apache/css/rya.css" rel="stylesheet"  type="text/css" media="screen" />
     <!-- Le fav and touch icons -->
     <!-- Update these with your own images
     <link rel="shortcut icon" href="images/favicon.ico">
@@ -110,11 +111,11 @@
 <p>Get help using Rya or contribute to the project on our mailing lists:</p>
 
 <ul>
-  <li><a href="&#109;&#097;&#105;&#108;&#116;&#111;:&#100;&#101;&#118;&#064;&#114;&#121;&#097;&#046;&#105;&#110;&#099;&#117;&#098;&#097;&#116;&#111;&#114;&#046;&#097;&#112;&#097;&#099;&#104;&#101;&#046;&#111;&#114;&#103;">&#100;&#101;&#118;&#064;&#114;&#121;&#097;&#046;&#105;&#110;&#099;&#117;&#098;&#097;&#116;&#111;&#114;&#046;&#097;&#112;&#097;&#099;&#104;&#101;&#046;&#111;&#114;&#103;</a> is for useage questions, help, and people who want to contribute code to Rya. <a href="&#109;&#097;&#105;&#108;&#116;&#111;:&#100;&#101;&#118;&#045;&#115;&#117;&#098;&#115;&#099;&#114;&#105;&#098;&#101;&#064;&#114;&#121;&#097;&#046;&#105;&#110;&#099;&#117;&#098;&#097;&#116;&#111;&#114;&#046;&#097;&#112;&#097;&#099;&#104;&#101;&#046;&#111;&#114;&#103;&#063;&#115;&#117;&#098;&#106;&#101;&#099;&#116;&#061;&#115;&#101;&#110;&#100;&#032;&#116;&#104;&#105;&#115;&#032;&#101;&#109;&#097;&#105;&#108;&#032;&#116;&#111;&#032;&#115;&#117;&#098;&#115;&#099;&#114;&#105;&#098;&#101;">subscribe</a>, <a href="&#109;&#097;&#105;&#108;&#116;&#111;:&#100;&#101;&#118;&#045;&#117;&#110;&#115;&#117;&#098;&#115;&#099;&#114;&#105;&#098;&#101;&#064;&#114;&#121;&#097;&#046;&#105;&#110;&#099;&#117;&#098;&#097;&#116;&#111;&#114;&#046;&#097;&#112;&#097;&#099;&#104;&#101;&#046;&#111;&#114;&#103;&#063;&#115;&#117;&#098;&#106;&#101;&#099;&#116;&#061;&#115;&#101;&#110;&#100;&#032;&#116;&#104;&#105;&#115;&#032;&#101;&#109;&#097;&#105;&#108;&#032;&#116;&#111;&#032;&#117;&#110;&#115;&#117;&#098;&#115;&#099;&#114;&#105;&#098;&#101;">unsubscribe</a>, <a href="https://www.mail-archive.com/dev@rya.incubator.apache.org/">archives</a></li>
+  <li><a href="mailto:dev@rya.incubator.apache.org">dev@rya.incubator.apache.org</a> is for useage questions, help, and people who want to contribute code to Rya. <a href="mailto:dev-subscribe@rya.incubator.apache.org?subject=send this email to subscribe">subscribe</a>, <a href="mailto:dev-unsubscribe@rya.incubator.apache.org?subject=send this email to unsubscribe">unsubscribe</a>, <a href="https://www.mail-archive.com/dev@rya.incubator.apache.org/">archives</a></li>
   <li>
-    <p><a href="&#109;&#097;&#105;&#108;&#116;&#111;:&#099;&#111;&#109;&#109;&#105;&#116;&#115;&#064;&#114;&#121;&#097;&#046;&#105;&#110;&#099;&#117;&#098;&#097;&#116;&#111;&#114;&#046;&#097;&#112;&#097;&#099;&#104;&#101;&#046;&#111;&#114;&#103;">&#099;&#111;&#109;&#109;&#105;&#116;&#115;&#064;&#114;&#121;&#097;&#046;&#105;&#110;&#099;&#117;&#098;&#097;&#116;&#111;&#114;&#046;&#097;&#112;&#097;&#099;&#104;&#101;&#046;&#111;&#114;&#103;</a> is for commit messages to Rya. <a href="&#109;&#097;&#105;&#108;&#116;&#111;:&#099;&#111;&#109;&#109;&#105;&#116;&#115;&#045;&#115;&#117;&#098;&#115;&#099;&#114;&#105;&#098;&#101;&#064;&#114;&#121;&#097;&#046;&#105;&#110;&#099;&#117;&#098;&#097;&#116;&#111;&#114;&#046;&#097;&#112;&#097;&#099;&#104;&#101;&#046;&#111;&#114;&#103;&#063;&#115;&#117;&#098;&#106;&#101;&#099;&#116;&#061;&#115;&#101;&#110;&#100;&#032;&#116;&#104;&#105;&#115;&#032;&#101;&#109;&#097;&#105;&#108;&#032;&#116;&#111;&#032;&#115;&#117;&#098;&#115;&#099;&#114;&#105;&#098;&#101;">subscribe</a>, <a href="&#109;&#097;&#105;&#108;&#116;&#111;:&#099;&#111;&#109;&#109;&#105;&#116;&#115;&#045;&#117;&#110;&#115;&#117;&#098;&#115;&#099;&#114;&#105;&#098;&#101;&#064;&#114;&#121;&#097;&#046;&#105;&#110;&#099;&#117;&#098;&#097;&#116;&#111;&#114;&#046;&#097;&#112;&#097;&#099;&#104;&#101;&#046;&#111;&#114;&#103;&#063;&#115;&#117;&#098;&#106;&#101;&#099;&#116;&#061;&#115;&#101;&#110;&#100;&#032;&#116;&#104;&#105;&#115;&#032;&#101;&#109;&#097;&#105;&#108;&#032;&#116;&#111;&#032;&#117;&#110;&#115;&#117;&#098;&#115;&#099;&#114;&#105;&#098;&#101;">unsubscribe</a>, <a href="https://www.mail-archive.com/commits@rya.incubator.apache.org/">archives</a></p>
+    <p><a href="mailto:commits@rya.incubator.apache.org">commits@rya.incubator.apache.org</a> is for commit messages to Rya. <a href="mailto:commits-subscribe@rya.incubator.apache.org?subject=send this email to subscribe">subscribe</a>, <a href="mailto:commits-unsubscribe@rya.incubator.apache.org?subject=send this email to unsubscribe">unsubscribe</a>, <a href="https://www.mail-archive.com/commits@rya.incubator.apache.org/">archives</a></p>
   </li>
-  <li><a href="&#109;&#097;&#105;&#108;&#116;&#111;:&#110;&#111;&#116;&#105;&#102;&#105;&#099;&#097;&#116;&#105;&#111;&#110;&#115;&#064;&#114;&#121;&#097;&#046;&#105;&#110;&#099;&#117;&#098;&#097;&#116;&#111;&#114;&#046;&#097;&#112;&#097;&#099;&#104;&#101;&#046;&#111;&#114;&#103;">&#110;&#111;&#116;&#105;&#102;&#105;&#099;&#097;&#116;&#105;&#111;&#110;&#115;&#064;&#114;&#121;&#097;&#046;&#105;&#110;&#099;&#117;&#098;&#097;&#116;&#111;&#114;&#046;&#097;&#112;&#097;&#099;&#104;&#101;&#046;&#111;&#114;&#103;</a> is for automated messages from JIRA, continuous integration, etc. for Rya. <a href="&#109;&#097;&#105;&#108;&#116;&#111;:&#110;&#111;&#116;&#105;&#102;&#105;&#099;&#097;&#116;&#105;&#111;&#110;&#115;&#045;&#115;&#117;&#098;&#115;&#099;&#114;&#105;&#098;&#101;&#064;&#114;&#121;&#097;&#046;&#105;&#110;&#099;&#117;&#098;&#097;&#116;&#111;&#114;&#046;&#097;&#112;&#097;&#099;&#104;&#101;&#046;&#111;&#114;&#103;&#063;&#115;&#117;&#098;&#106;&#101;&#099;&#116;&#061;&#115;&#101;&#110;&#100;&#032;&#116;&#104;&#105;&#115;&#032;&#101;&#109;&#097;&#105;&#108;&#032;&#116;&#111;&#032;&#115;&#117;&#098;&#115;&#099;&#114;&#105;&#098;&#101;">subscribe</a>, <a href="&#109;&#097;&#105;&#108;&#116;&#111;:&#110;&#111;&#116;&#105;&#102;&#105;&#099;&#097;&#116;&#105;&#111;&#110;&#115;&#045;&#117;&#110;&#115;&#117;&#098;&#115;&#099;&#114;&#105;&#098;&#101;&#064;&#114;&#121;&#097;&#046;&#105;&#110;&#099;&#117;&#098;&#097;&#116;&#111;&#114;&#046;&#097;&#112;&#097;&#099;&#104;&#101;&#046;&#111;&#114;&#103;&#063;&#115;&#117;&#098;&#106;&#101;&#099;&#116;&#061;&#115;&#101;&#110;&#100;&#032;&#116;&#104;&#105;&#115;&#032;&#101;&#109;&#097;&#105;&#108;&#032;&#116;&#111;&#032;&#117;&#110;&#115;&#117;&#098;&#115;&#099;&#114;&#105;&#098;&#101;">unsubscribe</a>, <a href="https://www.mail-archive.com/notifications@rya.incubator.apache.org/">archives</a></li>
+  <li><a href="mailto:notifications@rya.incubator.apache.org">notifications@rya.incubator.apache.org</a> is for automated messages from JIRA, continuous integration, etc. for Rya. <a href="mailto:notifications-subscribe@rya.incubator.apache.org?subject=send this email to subscribe">subscribe</a>, <a href="mailto:notifications-unsubscribe@rya.incubator.apache.org?subject=send this email to unsubscribe">unsubscribe</a>, <a href="https://www.mail-archive.com/notifications@rya.incubator.apache.org/">archives</a></li>
 </ul>
 
 <h3 id="issue-tracker">Issue tracker</h3>
@@ -151,7 +152,7 @@
 
       <hr>
       <footer>
-        <!-- <p>&copy; 2016 </p>-->
+        <!-- <p>&copy; 2017 </p>-->
         <footer class="site-footer">
     <div class="wrapper">
         <div class="footer-col-wrapper">
@@ -172,7 +173,7 @@
                 </div>
                 
                 <div>
-                    Copyright &copy; 2016 <a href="http://www.apache.org">The Apache Software Foundation</a>.
+                    Copyright &copy; 2017 <a href="http://www.apache.org">The Apache Software Foundation</a>.
                     Licensed under the <a href="http://www.apache.org/licenses/LICENSE-2.0">Apache License, Version
                     2.0</a>.
                     <br>
