--- a/content/documentation/index.html
+++ b/content/documentation/index.html
@@ -61,11 +61,11 @@
              <li id="apache">
               <a href="#" data-toggle="dropdown" class="dropdown-toggle">Apache<b class="caret"></b></a>
                <ul class="dropdown-menu">
-                <li><a href="http://www.apache.org/foundation/how-it-works.html">Apache Software Foundation</a></li>
-                <li><a href="http://www.apache.org/licenses/">Apache License</a></li>
-                <li><a href="http://www.apache.org/security/">Security</a></li>
-                <li><a href="http://www.apache.org/foundation/sponsorship.html">Sponsorship</a></li>
-                <li><a href="http://www.apache.org/foundation/thanks.html">Thanks</a></li>
+                <li><a href="https://www.apache.org/foundation/how-it-works.html">Apache Software Foundation</a></li>
+                <li><a href="https://www.apache.org/licenses/">Apache License</a></li>
+                <li><a href="https://www.apache.org/security/">Security</a></li>
+                <li><a href="https://www.apache.org/foundation/sponsorship.html">Sponsorship</a></li>
+                <li><a href="https://www.apache.org/foundation/thanks.html">Thanks</a></li>
                 </ul>
             </li>
           </ul>
@@ -116,7 +116,7 @@
 
 <h3 id="rya-manual">Rya Manual</h3>
 
-<p>A copy of the Rya Manual is located <a href="https://github.com/apache/incubator-rya/blob/master/extras/rya.manual/src/site/markdown/index.md">here</a></p>
+<p><a href="https://github.com/apache/rya/blob/master/extras/rya.manual/src/site/markdown/index.md">The latest Rya Manual</a></p>
 
 
   </div>
@@ -125,7 +125,7 @@
 
       <hr>
       <footer>
-        <!-- <p>&copy; 2019 </p>-->
+        <!-- <p>&copy; 2021 </p>-->
         <footer class="site-footer">
     <div class="wrapper">
         <div class="footer-col-wrapper">
@@ -133,8 +133,8 @@
             <div style="text-align:center;">
                 
                 <div>
-                    Copyright &copy; 2019 <a href="http://www.apache.org">The Apache Software Foundation</a>.
-                    Licensed under the <a href="http://www.apache.org/licenses/LICENSE-2.0">Apache License, Version
+                    Copyright &copy; 2021 <a href="https://www.apache.org">The Apache Software Foundation</a>.
+                    Licensed under the <a href="https://www.apache.org/licenses/LICENSE-2.0">Apache License, Version
                     2.0</a>.
                     <br>
                     
